[project]
name = "tlclient"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shenrun", email = "shenrunsms@pku.edu.cn" }
]
dependencies = [
    "requests>=2.32.3",
    "pyzmq>=26.0.3",
    "protobuf>=5.27.1",
    "pandas",
    "pytz>=2024.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tlclient"]
